feat: create/delete ads [HOS-147]
